--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -315,12 +315,15 @@ to { box-shadow:0px 0px 20px 5px darkred; }
 /* This is footer */
 footer{
     font-family: 'Anton', sans-serif;
-    width: 25%;
+    width: 100%;
     margin: 0 auto;
     height: 600%;
     background-color: #27212170;
-    margin-top: 30px;
+    margin-top: 40px;
     text-align: center;
+}
+#icon {
+    display: inline;
 }
    
 #p{
@@ -416,7 +419,7 @@ to { box-shadow:0px 0px 20px 5px darkred; }
     display: none; 
     background-color:#706b6b;
     color: black;
-    font-size: 30px;
+    font-size: 25px;
     position: fixed; 
     width: 450px; 
     border-radius: 15px; 
@@ -426,7 +429,7 @@ to { box-shadow:0px 0px 20px 5px darkred; }
     box-sizing: border-box; 
     margin-top: -350px;
     border: 4px solid #c10000;
-    font-family: 'Londrina Outline', cursive;
+    font-family: 'Spirax', cursive;
  } 
    
  /* Designing dialog box's okay buttun */
@@ -464,17 +467,25 @@ to { box-shadow:0px 0px 20px 5px darkred; }
  } 
 
  .orderImage{
-     margin-left: 350px;
+     margin-left: 100px;
+     margin-top:30px;
 
  }
 
  .orderImage img{
+    width: 100px;
     border:3px solid darkred;
     border-top-left-radius: 25%;
     border-top-right-radius:25% ;
     animation: glow 1s infinite alternate;
+    margin-left: 280px;
+    margin-top: -70px;
  }
 
+
+ .orderImage h3{
+  font-size: 25px;
+ }
  @keyframes glow {
     from {
       box-shadow: 0 0 10px -10px red;
