--- a/CSS/about-us.css
+++ b/CSS/about-us.css
@@ -22,15 +22,6 @@ body{
 #paraTalk{
     text-align: center;
 }
-#npng {
-    text-align: center;
-    font-family: fantasy;
-    color: rgb(255, 9, 9);
-    text-shadow: 3px 3px rgb(105, 76, 76);
-    font-size: 300%;
-    margin-top: 100px;
-    margin-bottom: 0px;
-}
 #talk{
     /* text-align: center; */
     font-size: 200%;
@@ -41,11 +32,34 @@ body{
 
 }
 .lightinfo{
-
- margin-left: 30%;
+    box-shadow:5px 5px #11101034; 
+    background-color: #221f1f21;
+ margin-left: 37%;
  padding-top: 10px;
    display: inline-block;
-
+   -webkit-filter: sepia(100%);
+    filter: sepia(100%);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    animation: glow 1s infinite alternate;
+}
+@keyframes glow {
+    from {
+      box-shadow: 0 0 10px -10px darkred;
+    }
+    to {
+      box-shadow: 0 0 10px 10px red;
+    }
+  }
+.lightinfo:hover{
+    -webkit-filter: sepia(0);
+    filter: sepia(0);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
 }
 .lightinfo1{
     margin-left: 15%;
@@ -61,21 +75,53 @@ body{
 }
 .members2{
     margin-bottom: 10px;
-    margin-left: 50px;
+    margin-left: 60px;
      box-shadow:5px 5px #11101034;
     display: inline-block;
     padding: 10px;
  background-color: #221f1f21;
     border-radius: 5px;
+    -webkit-filter: sepia(100%);
+    filter: sepia(100%);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    animation: glow 1s infinite alternate;
+    margin-top:20px;
+}
+
+.members2:hover{
+    -webkit-filter: sepia(0);
+    filter: sepia(0);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
 }
 .members3 {
     margin-bottom: 10px;
-    margin-left: 52px;
-    box-shadow:5px 5px #11101034;
+    margin-left: 62px;
     display: inline-block;
     padding: 10px;
  background-color: #221f1f21;
     border-radius: 5px;
+    -webkit-filter: sepia(100%);
+    filter: sepia(100%);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    animation: glow 1s infinite alternate;
+}
+
+.members3:hover{
+    -webkit-filter: sepia(0);
+    filter: sepia(0);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
 }
 #teachers{
     font-size: 200%;
@@ -86,22 +132,36 @@ body{
     margin-bottom: 0;
 }
 .teachers{
-    margin-left: 8%;
     padding-top: 10px;
+    margin-top: 30px;
 }
 .teacDiv{
-    margin-left: 10px;
+    margin-left: 55px;
     margin-bottom: 10px;
     box-shadow:5px 5px #352a2a34;
     display: inline-block;
     padding: 10px;
- background-color: #25242491;
+    background-color: #25242491;
     border-radius: 5px;
-    color: white;
-
+    color: black;
+    -webkit-filter: sepia(100%);
+    filter: sepia(100%);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    animation: glow 1s infinite alternate;
+}
+.teacDiv:hover{
+    -webkit-filter: sepia(0);
+    filter: sepia(0);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
 }
 .h3teac{
-    color: rgb(2, 1, 2);
+    color: red;
     font-family: 'Teko', sans-serif;
 }
 .name {
@@ -144,5 +204,52 @@ font-size: 110%;
     margin-left: 100px;
 }
 
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 
+svg {
+    display: block;
+    font: 10.5em 'Montserrat';
+    width: 600px;
+    height: 400px;
+    margin: 0 auto;
+    margin-top:-100px;
+}
+
+.text-copy {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 6% 29%;
+    stroke-width: 5px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+}
+
+.text-copy:nth-child(1){
+	stroke: red;
+	animation-delay: -1;
+}
+
+.text-copy:nth-child(2){
+	stroke: darkred;
+	animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+	stroke: black;
+	animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+	stroke: red;
+	animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+	stroke: darkred;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {stroke-dashoffset: -35%;}
+}
 
