--- a/CSS/about-us.css
+++ b/CSS/about-us.css
@@ -27,7 +27,7 @@ body{
     font-size: 200%;
     width: 50%;
     margin: 50px;
-    border-left: solid 1px rgb(255, 9, 9);
+    border-left: 5px solid rgb(255, 9, 9);
     padding-left: 8px;
 
 }
@@ -127,7 +127,7 @@ body{
     font-size: 200%;
     width: 50%;
     margin: 50px;
-    border-left: solid 1px rgb(255, 9, 9);
+    border-left: 5px solid rgb(255, 9, 9);
     padding-left: 8px;
     margin-bottom: 0;
 }
