--- a/CSS/about-us.css
+++ b/CSS/about-us.css
@@ -32,9 +32,9 @@ body{
 
 }
 .lightinfo{
-    box-shadow:5px 5px #11101034; 
-    background-color: #221f1f21;
- margin-left: 37%;
+    /* box-shadow:5px 5px #11101034;  */
+    /* background-color: #221f1f21; */
+ margin-left: 32%;
  padding-top: 10px;
    display: inline-block;
    -webkit-filter: sepia(100%);
@@ -48,12 +48,12 @@ body{
 
 }
 
-.lightinfo:hover{
+/* .lightinfo:hover{
     -webkit-filter: sepia(0);
     filter: sepia(0);
     -webkit-transform: scale(1.3);
     transform: scale(1.3);
-}
+} */
 .lightinfo1{
     margin-left: 15%;
     padding-top: 10px;
