--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -129,7 +129,7 @@ main{
 
 
 #italianDish ,#indianDish ,#arabianDish {
-
+    padding-bottom: 50px;
 margin-left:180px ;
 }
 
@@ -150,6 +150,7 @@ section img{
     width: 150px;
     height: 150px;
     margin-top: 25px;
+    margin-bottom: -150px;
     border: 3px solid white;
     border-radius: 50%;
     margin-left: -140px;
