--- a/CSS/about-us.css
+++ b/CSS/about-us.css
@@ -93,6 +93,8 @@ body{
     margin-bottom: 10px;
     margin-left: 62px;
     display: inline-block;
+    box-shadow:5px 5px #11101034;
+
     padding: 10px;
  background-color: #221f1f21;
     border-radius: 5px;
@@ -112,6 +114,7 @@ body{
     -webkit-transform: scale(1.3);
     transform: scale(1.3);
 }
+
 #teachers{
     font-size: 200%;
     width: 50%;
@@ -182,6 +185,12 @@ font-size: 110%;
     margin-left: 150px;
     border-radius: 5px ;
     box-shadow: 2px 2px 2px 2px rgba(175, 110, 110, 0.781);
+}
+#amad{
+    width: 15px;
+    display: inline-block;
+   
+
 }
 .imgpirso , .inspara {
     display: inline-block;
